--- a/auth-server/build.gradle
+++ b/auth-server/build.gradle
@@ -30,6 +30,8 @@ ext {
 }
 
 dependencies {
+	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    compile("org.springframework.boot:spring-boot-devtools")
 	compile('org.springframework.cloud:spring-cloud-starter-eureka:1.1.5.RELEASE')
 	compile('org.springframework.cloud:spring-cloud-starter-oauth2')
 	compile('org.springframework.boot:spring-boot-starter-security')
