--- a/auth-server/build.gradle
+++ b/auth-server/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile("com.h2database:h2")
+	compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
