--- a/resource-server1/build.gradle
+++ b/resource-server1/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
 	compile("com.h2database:h2")
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
