--- a/resource-server1/src/main/resources/application.yml
+++ b/resource-server1/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: resource-server1
+  jackson:
+    serialization:
+      WRITE_DATES_AS_TIMESTAMPS: false
 server:
   port: 9999
 
