--- a/resource-server1/build.gradle
+++ b/resource-server1/build.gradle
@@ -29,11 +29,13 @@ ext {
 }
 
 dependencies {
+	compile("org.springframework.boot:spring-boot-devtools")
 	compile('org.springframework.cloud:spring-cloud-starter-eureka:1.1.5.RELEASE')
 	compile('org.springframework.cloud:spring-cloud-starter-oauth2')
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile("org.springframework.boot:spring-boot-starter-data-rest")
 	compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
 	compile("com.h2database:h2")
 
