--- a/auth-server/build.gradle
+++ b/auth-server/build.gradle
@@ -31,6 +31,8 @@ ext {
 
 dependencies {
 	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+	compile('org.springframework.cloud:spring-cloud-starter-sleuth')
+	compile('org.springframework.cloud:spring-cloud-starter-zipkin')
     compile("org.springframework.boot:spring-boot-devtools")
 	compile('org.springframework.cloud:spring-cloud-starter-eureka:1.1.5.RELEASE')
 	compile('org.springframework.cloud:spring-cloud-starter-oauth2')
@@ -38,6 +40,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile("com.h2database:h2")
+	compile("org.postgresql:postgresql:9.4-1206-jdbc42")
 	compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
@@ -57,7 +60,7 @@ task buildDocker(type: Docker) {
     rename {'app.jar'}
   }
   exposePort(8080)
-  entryPoint(['java', '-Djava.security.egd=file:/dev/./urandom', '-jar', '/app.jar'])
+  entryPoint(['java', '-Djava.security.egd=file:/dev/./urandom', '-Dspring.profiles.active=docker', '-jar', '/app.jar'])
 }
 
 buildDocker.dependsOn(build)
