--- a/resource-server1/src/main/resources/application.yml
+++ b/resource-server1/src/main/resources/application.yml
@@ -1,11 +1,22 @@
 spring:
   application:
     name: resource-server1
+  zipkin:
+    base-url: http://zipkin
+  sleuth:
+    sampler:
+      percentage: 1.0
   jackson:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
 server:
   port: 9999
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    preferIpAddress: true
 
 
 security:
@@ -16,5 +27,5 @@ security:
       access-token-uri: http://localhost:8080/oauth/token
       user-authorization-uri: http://localhost:8080/oauth/authorize
     resource:
-      token-info-uri: http://localhost:8080/oauth/check_token
+      user-info-uri: http://localhost:8080/me
       
