--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,7 @@ rootProject.name = 'demo-project'
 include 'eureka-server'
 include 'resource-server1'
 include 'auth-server'
+include 'frontend'
+include 'gateway'
+include 'database'
+include 'zipkin'
