--- a/zipkin/build.gradle
+++ b/zipkin/build.gradle
@@ -11,15 +11,14 @@ buildscript {
 	}
 }
 
-apply plugin: 'docker'
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'docker'
 
 group = 'de.fseebach'
-version = '0.0.2-SNAPSHOT'
+version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
-
 
 repositories {
 	mavenCentral()
@@ -31,7 +30,10 @@ ext {
 }
 
 dependencies {
-	compile('org.springframework.cloud:spring-cloud-starter-eureka-server')
+    compile("org.springframework.boot:spring-boot-devtools")
+    compile('org.springframework.cloud:spring-cloud-starter-eureka:1.1.5.RELEASE')
+    compile('io.zipkin.java:zipkin-server')
+	compile('io.zipkin.java:zipkin-autoconfigure-ui')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
@@ -44,12 +46,12 @@ dependencyManagement {
 task buildDocker(type: Docker) {
   baseImage = 'openjdk:8-jdk-alpine'
   push = project.hasProperty('push')
-  tag = 'demo/eureka-server'
+  tag = 'demo/zipkin-server'
   addFile {
     from jar
     rename {'app.jar'}
   }
-  exposePort(8761)
+  exposePort(8080)
   entryPoint(['java', '-Djava.security.egd=file:/dev/./urandom', '-Dspring.profiles.active=docker', '-jar', '/app.jar'])
 }
 
