--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -27,7 +27,22 @@ zuul:
       sensitiveHeaders:
       serviceId: resource-server1
       strip-prefix: true
-      
+    auth:
+      path: /auth/**
+      sensitiveHeaders:
+      service-id: auth-server
+      strip-prefix: true
+
+hystrix:
+  command:
+    default:
+      execution:
+        timeout:
+          enabled: false
+ribbon:
+  ReadTimeout: 100000
+  ConnectTimeout: 100000 
+
 security: 
   basic: 
     enabled: false
