--- a/resource-server1/src/main/resources/application.yml
+++ b/resource-server1/src/main/resources/application.yml
@@ -18,14 +18,11 @@ eureka:
   instance:
     preferIpAddress: true
 
-
 security:
   oauth2:
     client:
       client-id: acme
       client-secret: acmesecret
-      access-token-uri: http://localhost:8080/oauth/token
-      user-authorization-uri: http://localhost:8080/oauth/authorize
     resource:
-      user-info-uri: http://localhost:8080/me
-      
+      jwt:
+        key-uri: http://localhost:8080/oauth/token_key
