--- a/auth-server/build.gradle
+++ b/auth-server/build.gradle
@@ -1,10 +1,12 @@
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-oauth2')
-	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
-	compile('org.springframework.boot:spring-boot-starter-security')
+	compile 'org.springframework.security:spring-security-config'
+	compile 'org.springframework.security:spring-security-oauth2-client'
+	compile 'org.springframework.security:spring-security-oauth2-jose'
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
-	compile("com.h2database:h2")
+	compile("org.hsqldb:hsqldb")
+	compile("net.minidev:json-smart:2.2.1")
 	compile("org.postgresql:postgresql:9.4-1206-jdbc42")
 }
 
