--- a/auth-server/src/main/resources/application.yml
+++ b/auth-server/src/main/resources/application.yml
@@ -18,19 +18,15 @@ spring:
   sleuth:
     sampler:
       percentage: 1.0
-
-facebook:
-  client:
-    clientId: 467525726975630
-    clientSecret: a7b56ef0799b916d6530cb13d5fe8b1c
-    accessTokenUri: https://graph.facebook.com/oauth/access_token
-    userAuthorizationUri: https://www.facebook.com/dialog/oauth
-    tokenName: oauth_token
-    authenticationScheme: query
-    clientAuthenticationScheme: form
-    scope: email
-  resource:
-    userInfoUri: https://graph.facebook.com/me?fields=email,name
-
-
-      
+  security:
+    oauth2:
+      client:
+        registration:
+          facebook:
+            clientId: 467525726975630
+            clientSecret: a7b56ef0799b916d6530cb13d5fe8b1c
+security:
+  oauth2: 
+    client:
+      client-id: bla
+      client-secret: blubb
