--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,27 @@
 buildscript {
 	ext {
-		springBootVersion = '1.5.10.RELEASE'
+		springCloudVersion = 'Finchley.M7'
+		springBootVersion = '2.0.0.RELEASE'
 	}
 	repositories {
 		mavenCentral()
+		maven {
+	        url 'https://repo.spring.io/libs-milestone'
+	    }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath "io.spring.gradle:dependency-management-plugin:1.0.3.RELEASE"
 		classpath 'se.transmode.gradle:gradle-docker:1.2'
 	}
 }
 
-configure([project(':auth-server'), project(':eureka-server'), project(':gateway'), project(':resource-server1'), project(':zipkin')]) {
+configure([project(':auth-server'), project(':eureka-server'), project(':gateway'), project(':resource-server1')]) {
 	
 	apply plugin: 'java'
 	apply plugin: 'eclipse'
 	apply plugin: 'org.springframework.boot'
+	apply plugin: "io.spring.dependency-management"
 	apply plugin: 'docker'
 	
 	group = 'de.fseebach'
@@ -24,23 +30,30 @@ configure([project(':auth-server'), project(':eureka-server'), project(':gateway
 	
 	repositories {
 		mavenCentral()
+		maven {
+	        url 'https://repo.spring.io/libs-milestone'
+	    }
+	    maven { url 'https://repo.spring.io/snapshot' }
 	}
 	
 	ext {
-		springCloudVersion = 'Edgware.SR1'
+		springCloudVersion = 'Finchley.M7'
 	}
 	
 	dependencyManagement {
 		imports {
+			mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
 			mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 		}
 	}
 	
 	dependencies {
 	    compile("org.springframework.boot:spring-boot-devtools")
+	    compile("org.springframework.boot:spring-boot-actuator")
 		compile('org.springframework.cloud:spring-cloud-starter-sleuth')
 		compile('org.springframework.cloud:spring-cloud-starter-zipkin')
-		compile('org.springframework.cloud:spring-cloud-starter-eureka')
+		compile 'org.springframework.cloud:spring-cloud-starter-config'
+    	compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 		compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
 		testCompile('org.springframework.boot:spring-boot-starter-test')
 	}
