--- a/resource-server1/build.gradle
+++ b/resource-server1/build.gradle
@@ -1,10 +1,14 @@
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-oauth2')
-	compile('org.springframework.boot:spring-boot-starter-security')
+	compile 'org.springframework.security:spring-security-config'
+	compile 'org.springframework.security:spring-security-oauth2-client'
+	compile 'org.springframework.security:spring-security-oauth2-jose'
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-security')
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile("org.springframework.boot:spring-boot-starter-data-rest")
 	compile("com.h2database:h2")
 	compile("org.postgresql:postgresql:9.4-1206-jdbc42")
+	compile("net.minidev:json-smart:2.2.1")
 
 }
