--- a/zipkin/build.gradle
+++ b/zipkin/build.gradle
@@ -1,4 +1,49 @@
 dependencies {
+    //Funktioniert scheinbar nicht mit spring boot 2
+    
+}
+
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'org.springframework.boot'
+apply plugin: "io.spring.dependency-management"
+apply plugin: 'docker'
+
+group = 'de.fseebach'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = 1.8
+
+repositories {
+    mavenCentral()
+    maven {
+        url 'https://repo.spring.io/libs-milestone'
+    }
+    maven { url 'https://repo.spring.io/snapshot' }
+}
+
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.boot:spring-boot-dependencies:1.5.10.RELEASE"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Edgware.SR2"
+    }
+}
+
+dependencies {
     compile('io.zipkin.java:zipkin-server')
 	compile('io.zipkin.java:zipkin-autoconfigure-ui')
 }
+
+task buildDocker(type: Docker) {
+    baseImage = 'openjdk:8-jdk-alpine'
+    push = project.hasProperty('push')
+    tag = "demo/$project.name"
+    addFile {
+    from jar
+    rename {'app.jar'}
+    }
+    exposePort(8080)
+    entryPoint(['java', '-Djava.security.egd=file:/dev/./urandom', '-Dspring.profiles.active=docker', '-jar', '/app.jar'])
+}
+
+buildDocker.dependsOn(build)
