--- a/build.gradle
+++ b/build.gradle
@@ -60,8 +60,8 @@ configure([project(':auth-server'), project(':eureka-server'), project(':gateway
 	
 	task buildDocker(type: Docker) {
 	  baseImage = 'openjdk:8-jdk-alpine'
-	  push = project.hasProperty('push')
-	  tag = "demo/$project.name"
+	  push = true //project.hasProperty('push')
+	  tag = "fseebach/$project.name"
 	  addFile {
 	    from jar
 	    rename {'app.jar'}
