--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -39,7 +39,7 @@ task buildFrontend(type: NpmTask, dependsOn: 'npmInstall') {
 
 task buildDocker(type: Docker) {
   baseImage = 'nginx:1.13.3-alpine'
-  push = project.hasProperty('push')
+  push = true
   tag = 'fseebach/frontend'
   
   addFile {
