--- a/auth-server/src/main/resources/application-docker.yml
+++ b/auth-server/src/main/resources/application-docker.yml
@@ -1,3 +1,8 @@
+server:
+  tomcat:
+    remote-ip-header: x-forwarded-for
+    protocol-header: x-forwarded-proto
+
 eureka:
   client:
     serviceUrl:
