--- a/auth-server/build.gradle
+++ b/auth-server/build.gradle
@@ -1,10 +1,17 @@
 dependencies {
+	compile "org.springframework.social:spring-social-core:2.0.0.M4"
+	compile "org.springframework.social:spring-social-web:2.0.0.M4"
+	compile "org.springframework.social:spring-social-config:2.0.0.M4"
+	compile "org.springframework.social:spring-social-security:2.0.0.M4"
+	compile "org.springframework.social:spring-social-facebook:3.0.0.M3"
 	compile('org.springframework.cloud:spring-cloud-starter-oauth2')
 	compile 'org.springframework.security:spring-security-config'
 	compile 'org.springframework.security:spring-security-oauth2-client'
 	compile 'org.springframework.security:spring-security-oauth2-jose'
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
+	
 	compile("org.hsqldb:hsqldb")
 	compile("net.minidev:json-smart:2.2.1")
 	compile("org.postgresql:postgresql:9.4-1206-jdbc42")
